# hpcrec

./: .gitignore  README.md  README.rst  plot_wave_tank_results.py  pyproject.toml  shoebox_demo.py  shoebox_demo_compare_dphidy.py  wave_tank_demo.py
demos/: cylinder.py  cylinder_femfem.py  cylinder_gmsh.geo  cylinder_hpc.py  cylinder_ns.py  cylinder_post.py  naca0012_gmsh.geo  plot_naca0012.py  plot_wave_tank_results.py  shoebox.py  shoebox_compare_dphidy.py  split_shoebox_hpc_hpc.py  utilities.py  wamod_h5_reconstruction.ipynb  wave_tank_linear.py
demos/data/: .gitignore
hpc/: __init__.py  assembly.py  boundary_conditions.py  hpc_cython.pyx  linalg.py  mesh.py  plotting.py  polynomials.py
hpcrec/: __init__.py  assembly.py  boundary_conditions.py  cache.py  configuration.py  linalg.py  mesh.py  plotting.py  polynomials.py  timer.py  wave_reconstruct.py
hpcrec/test_cases/: case_shoebox.py  wave_kinematics.py
hpcrec/tests/: test_periodic.py  test_shoebox.py
